tests/paczka1/small_fuzzy/94231795.err
Error in line 5: EZ3X8LM A698 57,21
Error in line 2: EZ3X8LM A430 94,7
